# WolfArena

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  AccessKey.csv  PROJECT_PLAN.md  README.md  VIBE_CODING_RULES.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: README.md  __init__.py  config.py  main.py
backend/app/agents/: README.md  __init__.py  graph.py  memory.py  personas.py  prompts.py  schemas.py  text_agent.py  validators.py
backend/app/api/: README.md  __init__.py  games.py  health.py  llm_config.py  websocket.py
backend/app/auth/: README.md  __init__.py  email_sender.py  exceptions.py  redis_codes.py  repository.py  router.py  schemas.py  security.py  service.py
backend/app/cache/: __init__.py  redis_client.py
backend/app/core/: README.md  __init__.py  engine.py  events.py  exceptions.py  models.py  player_labels.py  rules.py  serialization.py  visibility.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/llm/: README.md  __init__.py  base.py  openai_compatible.py
backend/app/sessions/: README.md  __init__.py  manager.py  models.py  snapshots.py
backend/app/voice/: README.md  __init__.py  background_audio.py  host_voice.py
backend/scripts/: README.md  play_full_game.py  test_llm_api.py
backend/tests/: README.md  conftest.py  test_agent_labels.py  test_agents_graph.py  test_auth_service.py  test_core_rules.py  test_game_api.py  test_health.py  test_text_agent_stream.py
backend/wolfarena_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: README.md  (+1 more)
(+79 files in other folders)
